--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "box-office",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://RachnaSingh1307.github.io/Box-Office-app",
   "dependencies": {
     "@tanstack/react-query": "^5.40.0",
     "eslint": "^8.57.0",
+    "gh-pages": "^6.1.1",
     "prettier": "^3.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -30,7 +32,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "format": "prettier --write src/**/*.{js,jsx}"
+    "format": "prettier --write src/**/*.{js,jsx}",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
